# Hannah_BE

./: .gitignore
Hannah_BE_python/: .env.example  ARCHITECTURE.md  Dockerfile  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
Hannah_BE_python/docs/: api_reference.md  architecture.md
Hannah_BE_python/docs/examples/: test_api.ps1  test_api.py  test_api.sh
Hannah_BE_python/scripts/: run_dev.py
Hannah_BE_python/src/api/: main.py
Hannah_BE_python/src/api/controllers/: conversation_controller.py  health_controller.py  message_controller.py
Hannah_BE_python/src/api/middleware/: cors_middleware.py  error_handler.py
Hannah_BE_python/src/api/schemas/: common_schema.py  conversation_schema.py  message_schema.py
Hannah_BE_python/src/application/dtos/: ai_dto.py  conversation_dto.py  message_dto.py
Hannah_BE_python/src/application/use_cases/conversation/: create_conversation.py  get_conversation.py  update_conversation.py
Hannah_BE_python/src/domain/entities/: conversation.py  message.py
Hannah_BE_python/src/domain/enums/: __init__.py  message_role.py
Hannah_BE_python/src/domain/exceptions/: domain_exceptions.py
Hannah_BE_python/src/domain/repositories/: ai_provider_repository.py  conversation_repository.py  message_repository.py
Hannah_BE_python/src/infrastructure/config/: dependency_injection.py  settings.py
Hannah_BE_python/tests/: conftest.py
Hannah_BE_python/tests/integration/: test_conversation_flow.py  test_health_controller.py
(+232 files in other folders)
